--- a/web/city-arc-tracker/src/App.css
+++ b/web/city-arc-tracker/src/App.css
@@ -2,19 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-image: linear-gradient(to bottom right, #226bbe, #040b6e);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -28,11 +17,12 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hero-name {
+  font-family: 'Red Circle';
+  font-style: italic;
+  text-shadow: 2px 2px black;
+}
+
+td {
+  font-size: 0.75em;
 }
