--- a/web/city-arc-tracker/src/index.css
+++ b/web/city-arc-tracker/src/index.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Red Circle';
+  src: local('REDCIRCL'), url(./fonts/REDCIRCL.ttf) format('truetype');
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
