Tweak background gradient.

--- a/web/city-arc-tracker/src/App.css
+++ b/web/city-arc-tracker/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background-image: linear-gradient(to bottom right, #226bbe, #040b6e);
+  background-image: linear-gradient(to bottom right, #9396a8, #0a1172);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
